istio/service-mesh-disallow-capabilities/.chainsaw-test/bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad01
spec:
  initContainers:
  - name: istio-init
    image: docker.io/istio/proxyv2:1.22.0
    args:
        - istio-iptables
        - -p
        - "15001"
        - -z
        - "15006"
        - -u
        - "1337"
        - -m
        - REDIRECT
        - -i
        - '*'
        - -x
        - ""
        - -b
        - '*'
        - -d
        - 15090,15021,15020
        - --log_output_level=default:info
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        add:
          - NET_ADMIN
          - NET_RAW
          - SYS_ADMIN
        drop:
          - ALL
      privileged: false
      readOnlyRootFilesystem: false
      runAsGroup: 0
      runAsNonRoot: false
      runAsUser: 0
  containers:
  - name: busybox
    image: busybox:1.35
    args:
    - sleep
    - infinity
    # securityContext:
    #   runAsNonRoot: true
    #   capabilities:
    #     add:
    #       - NET_ADMIN
    #       - NET_RAW
    #       - SYS_ADMIN
---
apiVersion: v1
kind: Pod
metadata:
  name: bad02
spec:
  initContainers:
  - name: istio-init
    image: docker.io/mymalicious/image:1.2.3
    args:
        - istio-iptables
        - -p
        - "15001"
        - -z
        - "15006"
        - -u
        - "1337"
        - -m
        - REDIRECT
        - -i
        - '*'
        - -x
        - ""
        - -b
        - '*'
        - -d
        - 15090,15021,15020
        - --log_output_level=default:info
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        add:
          - NET_ADMIN
        drop:
          - ALL
      privileged: false
      readOnlyRootFilesystem: false
      runAsGroup: 0
      runAsNonRoot: false
      runAsUser: 0
  containers:
  - name: busybox
    image: busybox:1.35
    args:
    - sleep
    - infinity
    # securityContext:
    #   runAsNonRoot: true
    #   capabilities:
    #     add:
    #       - NET_ADMIN
    #       - NET_RAW
    #       - SYS_ADMIN
---
apiVersion: v1
kind: Pod
metadata:
  name: bad03
spec:
  containers:
  - name: istio-init
    image: docker.io/istio/proxyv2:1.22.0
    args:
        - istio-iptables
        - -p
        - "15001"
        - -z
        - "15006"
        - -u
        - "1337"
        - -m
        - REDIRECT
        - -i
        - '*'
        - -x
        - ""
        - -b
        - '*'
        - -d
        - 15090,15021,15020
        - --log_output_level=default:info
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        add:
          - NET_ADMIN
          - NET_RAW
        drop:
          - ALL
      privileged: false
      readOnlyRootFilesystem: false
      runAsGroup: 0
      runAsNonRoot: false
      runAsUser: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: bad04
spec:
  initContainers:
  - name: istio-init
    image: docker.io/istio/proxyv2:1.22.0
    args:
        - istio-iptables
        - -p
        - "15001"
        - -z
        - "15006"
        - -u
        - "1337"
        - -m
        - REDIRECT
        - -i
        - '*'
        - -x
        - ""
        - -b
        - '*'
        - -d
        - 15090,15021,15020
        - --log_output_level=default:info
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        add:
          - NET_ADMIN
        drop:
          - ALL
      privileged: false
      readOnlyRootFilesystem: false
      runAsGroup: 0
      runAsNonRoot: false
      runAsUser: 0
  containers:
  - name: busybox
    image: busybox:1.35
    args:
    - sleep
    - infinity
    securityContext:
      runAsNonRoot: true
      capabilities:
        add:
          - NET_ADMIN
          # - NET_RAW
          # - SYS_ADMIN
