istio/service-mesh-disallow-capabilities/.chainsaw-test/good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good01
spec:
  initContainers:
  - name: istio-init
    image: docker.io/istio/proxyv2:1.22.0
    args:
        - istio-iptables
        - -p
        - "15001"
        - -z
        - "15006"
        - -u
        - "1337"
        - -m
        - REDIRECT
        - -i
        - '*'
        - -x
        - ""
        - -b
        - '*'
        - -d
        - 15090,15021,15020
        - --log_output_level=default:info
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        add:
          - NET_ADMIN
          - NET_RAW
          # - SYS_ADMIN
        drop:
          - ALL
      privileged: false
      readOnlyRootFilesystem: false
      runAsGroup: 0
      runAsNonRoot: false
      runAsUser: 0
  containers:
  - name: busybox
    image: busybox:1.35
    args:
    - sleep
    - infinity
    # securityContext:
    #   runAsNonRoot: true
    #   capabilities:
    #     add:
    #       - NET_ADMIN
    #       - NET_RAW
    #       - SYS_ADMIN
---
apiVersion: v1
kind: Pod
metadata:
  name: good02
spec:
  initContainers:
    - args:
        - --incoming-proxy-port
        - "4143"
        - --outgoing-proxy-port
        - "4140"
        - --proxy-uid
        - "2102"
        - --inbound-ports-to-ignore
        - 4190,4191,4567,4568
        - --outbound-ports-to-ignore
        - 4567,4568
      image: cr.l5d.io/linkerd/proxy-init:v2.4.0
      name: linkerd-init
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          add:
            - NET_ADMIN
            - NET_RAW
            # - SYS_ADMIN
        privileged: false
        readOnlyRootFilesystem: true
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
  containers:
    - args:
        - sleep
        - infinity
      image: busybox:1.35
      name: busybox
      # securityContext:
      #   runAsNonRoot: true
      #   capabilities:
      #     add:
      #       - NET_ADMIN
      #       - NET_RAW
      #       - SYS_ADMIN
