istio/service-mesh-disallow-capabilities/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: service-mesh-disallow-capabilities
status:
  ready: true
