istio/service-mesh-disallow-capabilities/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: service-mesh-disallow-capabilities
spec:
  steps:
  - name: Create policy in Enforce mode
    try:
    - apply:
        file: ../service-mesh-disallow-capabilities.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: service-mesh-disallow-capabilities
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
## Resource tests will not be 100% comprehensive because of major overlap with
## the PSS source of this policy.
  - name: Create good resources
    try:
    - apply:
        file: good.yaml
  - name: Try to create bad resources
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad.yaml
